// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> main header matches snapshot 1`] = `
<body>
  <div>
    <h2
      class="sc-bdnylx dIsRVf"
    >
      Header
    </h2>
  </div>
</body>
`;

exports[`<Header /> main header with border matches snapshot 1`] = `
<body>
  <div>
    <h2
      class="sc-bdnylx ea-DsHd"
    >
      Header
    </h2>
  </div>
</body>
`;

exports[`<Header /> subheader matches snapshot 1`] = `
<body>
  <div>
    <h5
      class="sc-gtssRu jcgMrl"
    >
      Header
    </h5>
  </div>
</body>
`;
